--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -126,7 +126,7 @@
             .charts {
                 padding: 1.5%;
                 gap: 5%;
-                height: 50%;
+                height: 40%;
                 margin-bottom: 1%;
                 flex: 1;
                 display: flex;
@@ -135,7 +135,6 @@
                 .title {
                     font-size: 2vmin;
                 }
-
                 .chart {
                     height: 95%;
                 }
